# exsocks

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  Makefile  README.md  README_CN.md  README_EN.md  build.rs
.github/workflows/: docker.yml  release.yml
benches/: cidr_match_bench.rs  domain_match_bench.rs
docs/deploy/: tune-kernel.sh
docs/deploy/docker/: start.sh
docs/deploy/docker-compose/: docker-compose.yaml
docs/deploy/systemd/: install.sh
docs/plans/: 001.构建高性能SOCKS5服务器.plan.md  002.性能与正确性问题修复方案.plan.md  003.创建测试方案.plan.md  004.移除splice统一异步转发方案.plan.md  005.整体架构性能梳理与优化.plan.md  006.添加内置DNS缓存.plan.md  007.缓冲区对象池复用.plan.md  008.支持代理认证.plan.md  009.支持源地址白名单.plan.md  010.支持目标地址规则管控.plan.md  011.兼容ATYP域名类型传IP地址.plan.md  012.倒序Trie优化域名匹配.plan.md  013.使用Radix_Trie优化IPCIDR匹配.plan.md  014.添加Prometheus-Metrics监控.plan.md  015.拆分目标规则为动态静态双文件并支持远程拉取.plan.md
docs/protocol/: RFC1928.txt  RFC1929.txt
docs/tests/: domain-match-vec-vs-smallvec-benchmark.md
example/: client-rules.yaml  server.yaml  target-rules.yaml  user.yaml
example/config/: dynamic-target-rules.yaml  server.yaml  static-target-rules.yaml
src/: access.rs  auth.rs  buffer_pool.rs  config.rs  dns_cache.rs  error.rs  lib.rs  limiter.rs  main.rs  metrics_registry.rs  metrics_server.rs  relay.rs  server.rs  target_rules.rs
src/socks5/: handshake.rs  mod.rs  protocol.rs  reply.rs  request.rs
tests/: access_test.rs  auth_test.rs  buffer_pool_test.rs  dns_cache_test.rs  e2e_proxy_test.rs  limiter_integration_test.rs  relay_test.rs  run-test-container.sh  socks5_handshake_test.rs  socks5_reply_test.rs  socks5_request_test.rs  target_rules_test.rs
tests/common/: mod.rs
