[package]
name = "exsocks"
version = "0.7.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing-rolling-file = { version = "0.1", features = ["non-blocking"] }
thiserror = "2"
bytes = "1"
serde = { version = "1", features = ["derive"] }
config = "0.15"
dirs = "6"
tokio-util = "0.7"
dashmap = "6"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
arc-swap = "1"
serde_yaml = "0.9"
ipnet = "2"
prefix-trie = "0.8"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
tokio-util = "0.7"
