[package]
name = "exsocks"
version = "0.8.0"
edition = "2024"

[features]
bench = []

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing-rolling-file = { version = "0.1", features = ["non-blocking"] }
thiserror = "2"
bytes = "1"
serde = { version = "1", features = ["derive"] }
config = "0.15"
dirs = "6"
tokio-util = "0.7"
dashmap = "6"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
arc-swap = "1"
serde_yaml = "0.9"
ipnet = "2"
prefix-trie = "0.8"
smallvec = "1"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1"] }
http-body-util = "0.1"
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
tokio-util = "0.7"
criterion = { version = "0.5", features = ["html_reports"] }
smallvec = "1"

[[bench]]
name = "domain_match_bench"
harness = false
required-features = ["bench"]

[[bench]]
name = "cidr_match_bench"
harness = false
